[gd_scene load_steps=4 format=3 uid="uid://chcfdjr23txvi"]

[ext_resource type="Script" path="res://Scripts/hazards.gd" id="1_atwl7"]
[ext_resource type="Texture2D" uid="uid://4r7a4lslkw0l" path="res://images/barbedwire.png" id="2_f107y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uxki8"]
size = Vector2(192, 180)

[node name="Spikes" type="Area2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_atwl7")
type = "Spikes"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-3, -0.999988)
scale = Vector2(3, 2.799)
texture = ExtResource("2_f107y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -4)
shape = SubResource("RectangleShape2D_uxki8")

[node name="DamageTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
